# tick-tock-tui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.env  flake.nix  fourmolu.yaml  justfile  tick-tock-tui.cabal
.github/workflows/: release.yml  test.yml
.zed/: settings.json
app/: Main.hs
demo/: README.md  block.tape  converter.tape  dashboard.tape  demo.tape  fees.tape  menu.tape  price.tape  ratio.tape
src/: TUI.hs
src/Client/: Client.hs  Types.hs
src/Client/Mempool/: Mempool.hs
src/TUI/: Attr.hs  Config.hs  Events.hs  Storage.hs  Types.hs  Utils.hs
src/TUI/Service/: API.hs  Common.hs  Kraken.hs  Mempool.hs  Types.hs
src/TUI/Widgets/: App.hs  Block.hs  Converter.hs  Countdown.hs  Dashboard.hs  Draft.hs  Fees.hs  Footer.hs  Header.hs  Loader.hs  Price.hs  Ratio.hs
test/: Main.hs
